[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/sairam.quadtree/QuadTreeNode.gd" type="Script" id=1]
[ext_resource path="res://Terrain.gd" type="Script" id=2]
[ext_resource path="res://TerrainTool.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Materials/Terrain.material" type="Material" id=5]
[ext_resource path="res://FPSDebug.gd" type="Script" id=6]
[ext_resource path="res://CircleAttenuation.gd" type="Script" id=7]
[ext_resource path="res://sounds/terraform_raise.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/terraform_lower.wav" type="AudioStream" id=9]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=10]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 5 )
size = Vector2( 16, 16 )
subdivide_width = 32
subdivide_depth = 32

[sub_resource type="BoxShape" id=2]
extents = Vector3( 8, 0.25, 8 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0, 0.858824, 1, 0.25098 )

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
top_radius = 3.0
bottom_radius = 3.0
height = 0.25

[node name="Spatial" type="Spatial"]

[node name="Terrain" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="QuadTreeNode" type="Spatial" parent="Terrain"]
script = ExtResource( 1 )
extents = Vector3( 8, 2, 8 )
capacity = 10
max_levels = 50
immediate_geo_node_path = NodePath("../../ImmediateGeometry")

[node name="StaticBody" type="StaticBody" parent="Terrain"]

[node name="CollisionShape" type="CollisionShape" parent="Terrain/StaticBody"]
shape = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.715644, 0.698465, 0, -0.698465, 0.715644, 0, 3.00651, 0 )
shadow_enabled = true

[node name="TerrainTool" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.133306, 0 )
mesh = SubResource( 4 )
material/0 = null
script = ExtResource( 3 )

[node name="AttenuatedCircle" type="Spatial" parent="TerrainTool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.133306, 0 )
script = ExtResource( 7 )
radius = 3.0
attentuation_radius = 0.01
min_power = 0.0

[node name="Raise" type="AudioStreamPlayer" parent="TerrainTool"]
stream = ExtResource( 8 )
volume_db = -3.098

[node name="Lower" type="AudioStreamPlayer" parent="TerrainTool"]
stream = ExtResource( 9 )
volume_db = -3.098

[node name="Camera" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
far = 8192.0
edge_scroll/enabled = false
edge_scroll/time = 1.0
edge_scroll/speed = 0.5
movement/time = 1.0
movement/speed = 0.5

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0
text = "FPS: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" parent="." instance=ExtResource( 10 )]
mouse_filter = 2

[node name="Radius" parent="Control2/PanelContainer/VBoxContainer/Radius" index="1"]
min_value = 1.0

[connection signal="radius_changed" from="Control2/PanelContainer" to="TerrainTool" method="_on_PanelContainer_radius_changed"]
[connection signal="state_changed" from="Control2/PanelContainer" to="TerrainTool" method="_on_PanelContainer_state_changed"]
[connection signal="strength_changed" from="Control2/PanelContainer" to="TerrainTool" method="_on_PanelContainer_strength_changed"]

[editable path="Control2"]
